--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@agentdeskai/browser-tools-mcp": "^1.1.0",
     "@modelcontextprotocol/server-postgres": "^0.6.2",
     "@supabase/supabase-js": "^2.39.7",
     "framer-motion": "^11.0.3",
